--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.ioc/cco.devops.extension.pattern.ioc.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.ioc/cco.devops.extension.pattern.ioc.csproj
@@ -48,7 +48,9 @@
   <ItemGroup>
     <Compile Include="Containers\AppPoolManagerContainer.cs" />
     <Compile Include="Containers\AppSettingReaderContainer.cs" />
+    <Compile Include="Containers\CoreContainer.cs" />
     <Compile Include="Containers\LogManagerContainer.cs" />
+    <Compile Include="Containers\ScriptRunnerContainer.cs" />
     <Compile Include="Containers\ToolsContainer.cs" />
     <Compile Include="Injector\InjectorContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,6 +63,10 @@
     <ProjectReference Include="..\cco.devops.extension.framework.core.windows\cco.devops.extension.framework.core.windows.csproj">
       <Project>{b3c5f28e-ed15-4aaf-8f2a-bec3262ac2ef}</Project>
       <Name>cco.devops.extension.framework.core.windows</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\cco.devops.extension.framework.core\cco.devops.extension.framework.core.csproj">
+      <Project>{42ed0ad9-4db4-4994-b626-3b90a695d88e}</Project>
+      <Name>cco.devops.extension.framework.core</Name>
     </ProjectReference>
     <ProjectReference Include="..\cco.devops.extension.framework.iis\cco.devops.extension.framework.core.iis.csproj">
       <Project>{074a0cd6-4651-4454-9948-062dd2b0ecf0}</Project>
